<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="settings_app_name">Settings</string>
    <string name="launcher_settings_app_name">Settings</string>
    <string name="launcher_network_app_name">Network</string>
    <string name="launcher_restricted_profile_app_name">Restricted Profile</string>
    <string name="general_action_yes">Yes</string>
    <string name="general_action_no">No</string>
    <string name="action_on_title">On</string>
    <string name="action_off_title">Off</string>
    <string name="action_on_description">On</string>
    <string name="action_off_description">Off</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="unavailable">Unavailable</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="header_category_suggestions">Suggestions</string>
    <string name="header_category_quick_settings">Quick Settings</string>
    <string name="header_category_general_settings">General Settings</string>
    <string name="dismiss_suggestion">Dismiss the suggestion</string>
    <string name="hotwording_title">\"OK Google\" detection</string>
    <string name="hotwording_summary">Talk to Google Assistant anytime</string>
    <string name="header_category_device">Device</string>
    <string name="header_category_preferences">Preferences</string>
    <string name="header_category_accessories">Remote &amp; Accessories</string>
    <string name="header_category_personal">Personal</string>
    <string name="connect_to_network">Connect to network</string>
    <string name="add_an_account">Add an account</string>
    <string name="accounts_category_title">Accounts &amp; sign-in</string>
    <string name="accounts_category_summary_no_account">No accounts</string>
    <string name="accounts_category_summary"> {count, plural,
        =1    {# account}
        other {# accounts}
        }
    </string>
    <string name="accounts_slice_summary">Media services, Assistant, Payments</string>
    <string name="connectivity_network_category_title">Network &amp; Internet</string>
    <string name="sound_category_title">Sound</string>
    <string name="applications_category_title">Apps</string>
    <string name="device_pref_category_title">Device Preferences</string>
    <string name="accessibility_category_title">Accessibility</string>
    <string name="remotes_and_accessories_category_title">Remotes &amp; accessories</string>
    <string name="display_and_sound_category_title">Display &amp; Sound</string>
    <string name="help_and_feedback_category_title">Help &amp; Feedback</string>
    <string name="privacy_category_title">Privacy</string>
    <string name="privacy_device_settings_category">Device Settings</string>
    <string name="privacy_account_settings_category">Account Settings</string>
    <string name="privacy_assistant_settings_title">Google Assistant</string>
    <string name="privacy_purchases_settings_title">Payment &amp; Purchases</string>
    <string name="privacy_app_settings_category">App Settings</string>
    <string name="privacy_category_summary">Location, Usage &amp; Diagnostics, Ads</string>
    <string name="add_account">Add account</string>
    <string name="account_header_remove_account">Remove account</string>
    <string name="account_sync">Choose synced apps</string>
    <string name="sync_now">Sync now</string>
    <string name="sync_in_progress">Syncing\u2026</string>
    <string name="last_synced">Last synced <xliff:g id="time">%1$s</xliff:g></string>
    <string name="sync_disabled">Disabled</string>
    <string name="account_remove">Remove account</string>
    <string name="account_remove_failed">Can\'t remove account</string>
    <string name="sync_item_title"><xliff:g id="authority" example="Calendar">%s</xliff:g></string>
    <string name="sync_one_time_sync">Sync now<xliff:g id="last_sync_time">\n%1$s</xliff:g></string>
    <string name="sync_failed">Sync failed</string>
    <string name="sync_active">Sync active</string>
    <string name="connectivity_wifi">Wi-Fi</string>
    <string name="connectivity_ethernet">Ethernet</string>
    <string name="connectivity_summary_ethernet_connected">Ethernet connected</string>
    <string name="connectivity_summary_no_network_connected">No network connected</string>
    <string name="connectivity_summary_wifi_disabled">Wi-Fi is turned off</string>
    <string name="wifi_setting_always_scan">Scanning always available</string>
    <string name="wifi_setting_always_scan_context">Let Google\'s location
        service and other apps scan for networks, even when Wi-Fi is off
    </string>
    <string name="wifi_setting_always_scan_content_description">Scanning
        always available, Let Google\'s location service and other apps scan
        for networks, even when Wi-Fi is off</string>
    <string name="wifi_setting_enable_wifi">Wi-Fi</string>
    <string name="connectivity_hint_message">Connect to network</string>
    <string name="connectivity_network_diagnostics">Network diagnostics</string>
    <string name="apps_recently_used_category_title">Recently opened apps</string>
    <string name="apps_see_all_apps">See all apps</string>
    <string name="apps_permissions_category_title">Permissions</string>
    <string name="overlay_security_slice_title"/>
    <string name="update_slice_title"/>
    <string name="all_apps_title">All apps</string>
    <string name="all_apps_show_system_apps">Show system apps</string>
    <string name="all_apps_installed">Installed apps</string>
    <string name="all_apps_other">System apps</string>
    <string name="all_apps_disabled">Disabled apps</string>
    <string name="device_daydream">Screen saver</string>
    <string name="device_display">Display</string>
    <string name="device_display_sound">Display &amp; Sound</string>
    <string name="device_sound">Sound</string>
    <string name="device_surround_sound">Surround sound</string>
    <string name="device_sound_effects">System sounds</string>
    <string name="device_apps">Applications</string>
    <string name="device_storage">Storage</string>
    <string name="device_reset">Factory reset</string>
    <string name="device_backup_restore">Backup &amp; Restore</string>
    <string name="device_factory_reset">Factory data reset</string>
    <string name="device_calibration">Calibration</string>
    <string name="device_energy_saver">Energy saver</string>
    <string name="device_eco_settings">Eco settings</string>
    <string name="overlay_internal_slice_title"/>
    <string name="overlay_internal_slice_uri" translatable="false"/>
    <string name="device_fastpair">Devices</string>
    <string name="fastpair_slice_uri" translatable="false" />
    <string name="surround_sound_select_formats">Select formats</string>
    <string name="surround_sound_category_title">Surround Sound</string>
    <string name="surround_sound_format_ac3">Dolby Digital</string>
    <string name="surround_sound_format_e_ac3">Dolby Digital Plus</string>
    <string name="surround_sound_format_dts">DTS</string>
    <string name="surround_sound_format_dts_hd">DTS-HD</string>
    <string name="surround_sound_format_dts_uhd">DTS-UHD</string>
    <string name="surround_sound_format_dolby_mat">Dolby Atmos with Dolby TrueHD</string>
    <string name="surround_sound_format_dolby_truehd">Dolby TrueHD</string>
    <string name="surround_sound_format_e_ac3_joc">Dolby Atmos with Dolby Digital Plus</string>
    <string name="surround_sound_format_dra">DRA</string>
    <string name="surround_sound_auto_info">Note: The Automatic option may not work if your device
        does not report its supported formats correctly.</string>
    <string name="surround_sound_auto_title">Automatic: Enable only the formats that are supported
        by your audio output device
        "</string>
    <string name="surround_sound_auto_summary">When selected, the system will allow apps to select
        any sound format that is supported by your device chain. Apps may choose a format that is
        not the highest-quality format.</string>
    <string name="surround_sound_none_title">None: Never use surround sound</string>
    <string name="surround_sound_manual_title">Manual: Selectively enable or disable each format
        supported by this device, regardless of what is supported by your audio output
        device.</string>
    <string name="surround_sound_manual_summary">When selected, you can manually disable sound
        formats that are supported by your device chain that cause problems with playback. Sound
        formats not supported by your device chain can be enabled. In some cases apps may choose a
        format that is not the highest-quality format.</string>
    <string name="surround_sound_enable_unsupported_dialog_title">Enabling unsupported sound
        format?</string>
    <string name="surround_sound_enable_unsupported_dialog_desc">Your connected audio device does
            not report support for this format. This may cause unexpected behaviours like loud
            noises or pops from your device.</string>
    <string name="surround_sound_enable_unsupported_dialog_cancel">Cancel</string>
    <string name="surround_sound_enable_unsupported_dialog_ok">Change anyway</string>
    <string name="surround_sound_supported_title">SUPPORTED FORMATS</string>
    <string name="surround_sound_unsupported_title">UNSUPPORTED FORMATS</string>
    <string name="surround_sound_format_info">FORMAT INFO</string>
    <string name="accessories_add">Add accessory</string>
    <string name="send_feedback">Send feedback</string>
    <string name="launch_help">Help Center</string>
    <string name="system_speech">Speech</string>
    <string name="about_preference">About</string>
    <string name="title_wifi_scan_qr_code">Scan QR code to join</string>
    <string name="wifi_scan_qr_code_description">
        Join a Wi-Fi by scanning the QR code from a mobile phone and follow the instructions.\n
        \n
        From an <b>Android Phone</b> go to Settings -> Network &amp; internet -> Wi-Fi -> Select a Wi-Fi -> Advanced -> Add device and then scan the QR code.
    </string>
    <string name="wifi_scan_qr_code_back_description">Press the back button to cancel</string>
    <string name="accessibility_color_correction">Color correction</string>
    <string name="color_correction_usage">Use color correction</string>
    <string name="color_correction_color_mode">Color Mode</string>
    <string name="color_correction_mode_deuteranomaly">Deuteranomaly</string>
    <string name="color_correction_mode_deuteranomaly_summary">Red-green</string>
    <string name="color_correction_mode_protanomaly">Protanomaly</string>
    <string name="color_correction_mode_protanomaly_summary">Red-green</string>
    <string name="color_correction_mode_tritanomaly">Tritanomaly</string>
    <string name="color_correction_mode_tritanomaly_summary">Blue-yellow</string>
    <string name="color_correction_mode_grayscale">Grayscale</string>
    <string name="palette_color_red">Red</string>
    <string name="palette_color_orange">Orange</string>
    <string name="palette_color_yellow">Yellow</string>
    <string name="palette_color_green">Green</string>
    <string name="palette_color_cyan">Cyan</string>
    <string name="palette_color_blue">Blue</string>
    <string name="palette_color_purple">Purple</string>
    <string name="palette_color_gray">Gray</string>
    <string name="limit_network_in_standby_toggle_title">Limit network connection in standby</string>
    <string name="limit_network_in_standby_toggle_summary">Uses less energy in standby mode</string>
    <string name="power_and_energy">Power &amp; Energy</string>
    <string name="power_on_behavior">Power on behavior</string>
    <string name="power_boot_resume_slice_uri" translatable="false" />
</resources>